php-src/ext/phar/tests/bug77396.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught UnexpectedValueException: Phar creation or opening failed in /root/php-src/ext/phar/tests/bug77396.php:3
Stack trace:
#0 /root/php-src/ext/phar/tests/bug77396.php(3): PharData->__construct('../xxxxxxxxxxxx...')
#1 {main}
  thrown in /root/php-src/ext/phar/tests/bug77396.php on line 3